[package]
name = "adowner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.23"
tokio = { version = "1", features = ["full"] }
encoding_rs = "0.8.33"
select = "0.6.0"
clap = { version = "4.4.18", features = ["derive"] }


[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
